<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_nav"
    app:startDestination="@id/firstMainFragment">

    <fragment
        android:id="@+id/listFragment"
        android:name="sm_tv_prodactions.com.newtodolist.fragments.list.note.ListFragment"
        android:label="@string/note_list"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_listFragment_to_addFragment"
            app:destination="@id/addFragment" />
        <action
            android:id="@+id/action_listFragment_to_updateFeagment"
            app:destination="@id/updateFeagment" />
        <action
            android:id="@+id/action_listFragment_to_shopingListFragment2"
            app:destination="@id/shopingListFragment" />
    </fragment>
    <fragment
        android:id="@+id/addFragment"
        android:name="sm_tv_prodactions.com.newtodolist.fragments.add.note.AddFragment"
        android:label="@string/add_note_list"
        tools:layout="@layout/fragment_add" >

        <action
            android:id="@+id/action_addFragment_to_listFragment"
            app:destination="@id/listFragment" />
    </fragment>
    <fragment
        android:id="@+id/updateFeagment"
        android:name="sm_tv_prodactions.com.newtodolist.fragments.update.note.UpdateFeagment"
        android:label="@string/update_note_list"
        tools:layout="@layout/fragment_update_feagment" >
        <action
            android:id="@+id/action_updateFeagment_to_listFragment"
            app:destination="@id/listFragment" />
        <argument
            android:name="currentNote"
            app:argType="sm_tv_prodactions.com.newtodolist.models.Note" />
    </fragment>
    <fragment
        android:id="@+id/shopingListFragment"
        android:name="sm_tv_prodactions.com.newtodolist.fragments.list.shopping.ShopingListFragment"
        android:label="@string/shoping_list"
        tools:layout="@layout/fragment_shoping_list" >
        <action
            android:id="@+id/action_shopingListFragment_to_updateShopingItem"
            app:destination="@id/updateShopingItem" />
        <action
            android:id="@+id/action_shopingListFragment_to_addShopingListFragment"
            app:destination="@id/addShopingListFragment" />
    </fragment>
    <fragment
        android:id="@+id/updateShopingItem"
        android:name="sm_tv_prodactions.com.newtodolist.fragments.update.shopping.UpdateShopingItem"
        android:label="@string/update_shoping_list"
        tools:layout="@layout/fragment_update_shoping_item" >
        <action
            android:id="@+id/action_updateShopingItem_to_shopingListFragment"
            app:destination="@id/shopingListFragment" />
        <argument
            android:name="currentItem"
            app:argType="sm_tv_prodactions.com.newtodolist.models.ShoppingList" />
    </fragment>
    <fragment
        android:id="@+id/addShopingListFragment"
        android:name="sm_tv_prodactions.com.newtodolist.fragments.add.shopping.AddShopingListFragment"
        android:label="@string/add_shoping_list"
        tools:layout="@layout/fragment_add_shoping_list" >
        <action
            android:id="@+id/action_addShopingListFragment_to_shopingListFragment"
            app:destination="@id/shopingListFragment" />
    </fragment>
    <fragment
        android:id="@+id/firstMainFragment"
        android:name="sm_tv_prodactions.com.newtodolist.fragments.mainList.list.FirstMainFragment"
        android:label="@string/first_main_lists"
        tools:layout="@layout/fragment_first_main" >
        <action
            android:id="@+id/action_firstMainFragment_to_listFragment"
            app:destination="@id/listFragment" />
        <action
            android:id="@+id/action_firstMainFragment_to_mainAddListFragment"
            app:destination="@id/mainAddListFragment" />
    </fragment>
    <fragment
        android:id="@+id/mainAddListFragment"
        android:name="sm_tv_prodactions.com.newtodolist.fragments.mainList.list.MainAddListFragment"
        android:label="fragment_main_list"
        tools:layout="@layout/fragment_main_add_list" >
        <action
            android:id="@+id/action_mainListFragment_to_firstMainFragment"
            app:destination="@id/firstMainFragment" />
        <action
            android:id="@+id/action_mainListFragment_to_addPersonalNote"
            app:destination="@id/addPersonalNote" />
        <argument
            android:name="parent_uid"
            app:argType="integer"
            android:defaultValue="0" />
        <argument
            android:name="parent_title"
            app:argType="string"
            android:defaultValue="null" />
        <action
            android:id="@+id/action_mainAddListFragment_to_updatePersonalOneNote"
            app:destination="@id/updatePersonalOneNote" />
    </fragment>
    <fragment
        android:id="@+id/updatePersonalOneNote"
        android:name="sm_tv_prodactions.com.newtodolist.fragments.mainList.update.UpdatePersonalOneNote"
        android:label="Обновление"
        tools:layout="@layout/fragment_update_personal_one_note">
        <action
            android:id="@+id/action_updatePersonalOneNote_to_mainAddListFragment"
            app:destination="@id/mainAddListFragment" />
        <argument
            android:name="parent_title"
            android:defaultValue="null"
            app:argType="string" />
        <argument
            android:name="child_title"
            app:argType="string"
            android:defaultValue="null" />
        <argument
            android:name="child_done"
            app:argType="boolean"
            android:defaultValue="true" />
        <argument android:name="child_uid"
            app:argType="integer" />
        <argument
            android:name="uid"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/addPersonalNote"
        android:name="sm_tv_prodactions.com.newtodolist.fragments.mainList.add.AddPersonalNote"
        android:label="Add"
        tools:layout="@layout/fragment_add_personal_note" >
        <action
            android:id="@+id/action_addPersonalNote_to_mainAddListFragment"
            app:destination="@id/mainAddListFragment" />
        <argument
            android:name="parent_uid"
            app:argType="integer"
            android:defaultValue="0" />
        <argument
            android:name="parent_title"
            app:argType="string"
            android:defaultValue="nullAdd" />
    </fragment>
</navigation>